<resources>
    <string name="app_name">HotSpot Health Code</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Hotspot Health Code</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_general_plume">GeneralPlumeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Radionuclide">Radionuclide</string>
    <string name="MaterialAtRisk">Material At Risk (MAR)</string>
    <string name="DamageRatio">Damage Ratio (DR)</string>
    <string name="LeakpathFactor">Leakpath Factor</string>
    <string name="EffectiveReleaseHeight">Effective Release Height</string>
    <string name="DepositionVelocity">Deposition Velocity</string>
    <string name="AirbornFraction">Airborn Fraction (ARF)</string>
    <string name="RespirableFraction">Respirable Fraction (RF)</string>
    <string name="title_activity_maps">Map</string>
    <string name="continue_action">Continue</string>
    <string name="back_action">Back</string>
    <string name="title_activity_stepper">StepperActivity</string>
    <string name="WindSpeedText">Wind Speed</string>
</resources>
