<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

        <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.hotspothealthcode.hotspothealthcode.GeneralPlumeActivity$PlaceholderFragment"
            android:id="@+id/gridLayout">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Radionuclide"
            android:id="@+id/tvRadionuclide"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/etRadionuclide"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="1"
                android:layout_column="0">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/MaterialAtRisk"
                android:id="@+id/tvMaterialAtRisk"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etMaterialAtRisk"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="3"
                android:layout_column="0">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/DamageRatio"
                android:id="@+id/tvDamageRatio"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etDamageRatio"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="5"
                android:layout_column="0">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/LeakpathFactor"
                android:id="@+id/tvLeakpathFactor"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etLeakpathFactor"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="7"
                android:layout_column="0">
            </EditText>

            <View style="@style/Divider"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_columnSpan="2">

            </View>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/EffectiveReleaseHeight"
            android:id="@+id/tvEffectiveReleaseHeight"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etEffectiveReleaseHeight"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="10"
                android:layout_column="0">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/DepositionVelocity"
                android:id="@+id/tvDepositionVelocity"
                android:layout_row="11"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etDepositionVelocity"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="12"
                android:layout_column="0">
            </EditText>

            <View style="@style/Divider"
                android:layout_row="13"
                android:layout_column="0"
                android:layout_columnSpan="2">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/AirbornFraction"
                android:id="@+id/tvAirbornFraction"
                android:layout_row="14"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etAirbornFraction"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="15"
                android:layout_column="0">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/RespirableFraction"
                android:id="@+id/tvRespirableFraction"
                android:layout_row="16"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etRespirableFraction"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_row="17"
                android:layout_column="0">
            </EditText>
        </GridLayout>
</ScrollView>
